Enable comments and author for all posts

--- a/_posts/2015-05-14-o365admin_part1.md
+++ b/_posts/2015-05-14-o365admin_part1.md
@@ -2,6 +2,8 @@
 layout: post
 title: The O365 Admin Powershell Module - Part 1
 categories: [Office 365, Powershell]
+author: Matt McNabb
+comments: true
 ---
 
 [Connect]: https://technet.microsoft.com/en-us/library/jj984289(v=exchg.150).aspx
@@ -24,10 +26,10 @@ That's quite a bit of typing, and this stinks if you have to come in every morni
 {% highlight Powershell %}
 ### Connect to Azure Active Directory to manage users, groups and licensing
 Connect-MsolService -Credential $Credential
- 
+
 ### Connect to Sharepoint Online for domain psescape.onmicrosoft.com
 Connect-SpoService -Credential $Credential -Url https://psescape-admin.sharepoint.com
- 
+
 ### Connect to Lync Online
 $Session = New-CsOnlineSession -Credential $Credential
 Import-PSSession $Session
